--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <script type="text/javascript" src='chosen/chosen.jquery.js'></script>
 <script type="text/javascript" src='node_modules/backbone/node_modules/underscore/underscore.js'></script>
 <script type="text/javascript" src='node_modules/backbone/backbone.js'></script>
-<script type="text/javascript" src='node_modules/backbone.localstorage/backbone.localstorage.js'></script>
+<script type="text/javascript" src='node_modules/backbone.localstorage/backbone.localStorage.js'></script>
 <script type="text/javascript" src='node_modules/url-template/lib/url-template.js'></script>
 
 <script type="text/template" id="condition-group-template">
